Upgraded ChartJS and MomentJS versions